--- a/servicio-destacado.html
+++ b/servicio-destacado.html
@@ -171,7 +171,7 @@ cnia<!DOCTYPE html>
       <h5 class="text-primary">Requisitos y condiciones</h5>
       <ul>
         <li><strong>Cédula de ciudadanía:</strong> 1 copia legible.</li>
-        <li><strong>Formulario Único Nacional - FUN:</strong> 1 original firmado. <a href="#">Descargue aquí</a></li>
+        <li><strong>Formulario Único Nacional - FUN:</strong> 1 original firmado. <a href="https://www.minvivienda.gov.co/sites/default/files/consultasp/Formulario%20%C3%BAnico%20nacional_8.pdf">Descargue aquí</a></li>
         <li><strong>Certificado de tradición y libertad:</strong> 1 copia con vigencia menor a 30 días.</li>
         <li><strong>Certificado catastral:</strong> 1 copia o impuesto predial del último año.</li>
         <li><strong>Peritaje Técnico:</strong> 1 original.</li>
@@ -180,7 +180,7 @@ cnia<!DOCTYPE html>
         <li><strong>Resolución de legalización del barrio:</strong> 1 copia legible.</li>
         <li><strong>Escritura pública:</strong> 1 copia, o documento de propiedad o recibo de servicios públicos.</li>
         <li><strong>Plano de loteo y manzana catastral:</strong> 1 copia de cada uno.</li>
-        <li><strong>Declaración de antigüedad:</strong> 1 original bajo juramento. <a href="#">Descargue aquí</a></li>
+        <li><strong>Declaración de antigüedad:</strong> 1 original bajo juramento. <a href="https://www.cajaviviendapopular.gov.co/curaduriasocial/docs/declaracion_antiguedad.pdf">Descargue aquí</a></li>
         <li><strong>Plano arquitectónico existente:</strong> 1 original firmado por arquitecto.</li>
       </ul>
     </div>
