--- a/servicio-destacado.html
+++ b/servicio-destacado.html
@@ -176,7 +176,7 @@ cnia<!DOCTYPE html>
         <li><strong>Certificado catastral:</strong> 1 copia o impuesto predial del último año.</li>
         <li><strong>Peritaje Técnico:</strong> 1 original.</li>
         <li><strong>Tarjeta o matrícula profesional:</strong> 1 copia por profesional interviniente.</li>
-        <li><strong>Poder:</strong> 1 original otorgado ante notario o juez. <a href="#">Descargue aquí</a></li>
+        <li><strong>Poder:</strong> 1 original otorgado ante notario o juez. <a href="https://gcageoconsultores.github.io/gcageoconsultores/Documentos/poder_tramite_reconocimineto.docx">Descargue aquí</a></li>
         <li><strong>Resolución de legalización del barrio:</strong> 1 copia legible.</li>
         <li><strong>Escritura pública:</strong> 1 copia, o documento de propiedad o recibo de servicios públicos.</li>
         <li><strong>Plano de loteo y manzana catastral:</strong> 1 copia de cada uno.</li>
