--- a/servicio-destacado.html
+++ b/servicio-destacado.html
@@ -225,7 +225,7 @@ predios y construcciones vecinas.</p>
     
     <!-- 1. Apoyo Técnico -->
     <div class="col-md-6 mb-4 d-flex">
-      <img src="img/apoyo_tecnico.png" alt="Apoyo Técnico" class="me-3" style="width:60px; height:60px;">
+      <img src="Imagenes/Apoyo_tecnico.png" alt="Apoyo Técnico" class="me-3" style="width:60px; height:60px;">
       <div>
         <h5>Apoyo Técnico</h5>
         <p>Asistencia técnica y social que contempla el acompañamiento en todo el proceso, información, capacitación y entrega del documento solicitado por la Curaduría Pública Social para el estudio de suelos.</p>
@@ -233,9 +233,9 @@ predios y construcciones vecinas.</p>
       </div>
     </div>
 
-    <!-- 2. Sondeos-->
+    <!-- 2. Exploración-->
     <div class="col-md-6 mb-4 d-flex">
-      <img src="img/reconocimiento.png" alt="Reconocimiento" class="me-3" style="width:60px; height:60px;">
+      <img src="Imagenes/Eploracion_suelo.png" alt="Reconocimiento" class="me-3" style="width:60px; height:60px;">
       <div>
         <h5>Exploración del suelo</h5>
         <p>Los sondeos son exploraciones directas del subsuelo que se realizan mediante perforaciones verticales (o inclinadas), con el fin de obtener información sobre la naturaleza, estratigrafía, propiedades físicas y mecánicas de los suelos y rocas presentes en un sitio específico.
@@ -244,9 +244,9 @@ predios y construcciones vecinas.</p>
       </div>
     </div>
 
-    <!-- 3. Plan Terrazas -->
+    <!-- 3. Sondeos -->
     <div class="col-md-6 mb-4 d-flex">
-      <img src="img/plan_terrazas.png" alt="Plan Terrazas" class="me-3" style="width:60px; height:60px;">
+      <img src="Imagenes/Sondeos.png" alt="Plan Terrazas" class="me-3" style="width:60px; height:60px;">
       <div>
         <h5>Sondeos mínimos según la NSR-10 (Título H – Estudios Geotécnicos)</h5>
         <p>La NSR-10, en su Título H (Artículo H.4.2), establece los criterios mínimos de investigación del suelo para edificaciones:
@@ -270,7 +270,7 @@ Cuando el esfuerzo vertical efectivo adicional sea menor al 10% del esfuerzo ver
 
     <!-- 4. Beneficios -->
     <div class="col-md-6 mb-4 d-flex">
-      <img src="img/beneficios.png" alt="Beneficios" class="me-3" style="width:60px; height:60px;">
+      <img src="Imagenes/Beneficios.png" alt="Beneficios" class="me-3" style="width:60px; height:60px;">
       <div>
         <h5>Beneficios</h5>
         <ul>
