--- a/servicio-destacado.html
+++ b/servicio-destacado.html
@@ -244,29 +244,30 @@ predios y construcciones vecinas.</p>
       </div>
     </div>
 
-    <!-- 3. Sondeos -->
-    <div class="col-md-6 mb-4 d-flex">
-      <img src="Imagenes/Sondeos.png" alt="Plan Terrazas" class="me-3" style="width:60px; height:60px;">
-      <div>
-        <h5>Sondeos mínimos según la NSR-10 (Título H – Estudios Geotécnicos)</h5>
-        <p>La NSR-10, en su Título H (Artículo H.4.2), establece los criterios mínimos de investigación del suelo para edificaciones:
+<!-- 3. Sondeos -->
+<div class="col-md-6 mb-4 d-flex">
+  <img src="Imagenes/Sondeos.png" alt="Sondeos mínimos" class="me-3" style="width:60px; height:60px;">
+  <div>
+    <h5>Sondeos mínimos según la NSR-10 (Título H – Estudios Geotécnicos)</h5>
+    <p>Para garantizar la seguridad y estabilidad de las construcciones, la <strong>Norma NSR-10 (Título H)</strong> establece los requisitos mínimos de sondeos que deben realizarse en el terreno antes de iniciar cualquier obra. Estos sondeos permiten conocer las características del suelo y así diseñar adecuadamente las cimentaciones.</p>
+    <p><strong>Número y profundidad mínima de sondeos según la categoría del proyecto:</strong></p>
+    <ul>
+      <li><strong>Categoría Baja:</strong> 3 sondeos de al menos 6 m de profundidad.</li>
+      <li><strong>Categoría Media:</strong> 4 sondeos de al menos 15 m de profundidad.</li>
+      <li><strong>Categoría Alta:</strong> 4 sondeos de al menos 25 m de profundidad.</li>
+      <li><strong>Categoría Especial:</strong> 5 sondeos de al menos 30 m de profundidad.</li>
+    </ul>
+    <p>Además:</p>
+    <ul>
+      <li>Al menos el 50% deben recuperar muestras para análisis detallado.</li>
+      <li>Las muestras se toman cada metro en los primeros 5 m y luego cada 1.5 m o cuando cambia el material.</li>
+      <li>El 50% de los sondeos deben ubicarse dentro del área de la edificación.</li>
+      <li>El ingeniero geotecnista podrá determinar mayores profundidades o ajustes según el tipo de terreno.</li>
+    </ul>
+    <p>En nuestros estudios cumplimos con estas exigencias, garantizando confiabilidad, normatividad y seguridad para su proyecto.</p>
+  </div>
+</div>
 
-Para estudios de suelos (artículo H.4.2.3):
-Mínimo 2 sondeos para edificaciones de hasta 2 pisos o áreas menores a 500 m².
-
-Para edificaciones mayores a 2 pisos o áreas mayores a 500 m²:
-
-Se debe realizar al menos 1 sondeo por cada 400 m² de construcción proyectada, distribuidos uniformemente en la planta.
-
-La profundidad de los sondeos debe:
-
-Alcanzar al menos una vez y media la dimensión menor del edificio, o
-
-Hasta que se llegue a un estrato competente y sin cambios significativos, o
-
-Cuando el esfuerzo vertical efectivo adicional sea menor al 10% del esfuerzo vertical total existente.</p>
-      </div>
-    </div>
 
     <!-- 4. Beneficios -->
     <div class="col-md-6 mb-4 d-flex">
