--- a/servicio-destacado.html
+++ b/servicio-destacado.html
@@ -269,18 +269,30 @@ predios y construcciones vecinas.</p>
 </div>
 
 
-    <!-- 4. Beneficios -->
-    <div class="col-md-6 mb-4 d-flex">
-      <img src="Imagenes/Beneficios.png" alt="Beneficios" class="me-3" style="width:60px; height:60px;">
-      <div>
-        <h5>Beneficios</h5>
-        <ul>
-          <li>Disminuir la vulnerabilidad frente a terremotos.</li>
-          <li>Mejorar condiciones de habitabilidad.</li>
-          <li>Acceso a servicios para mejorar ingresos.</li>
-        </ul>
-      </div>
-    </div>
+<!-- 4. Beneficios -->
+<div class="col-md-6 mb-4 d-flex">
+  <img src="Imagenes/Beneficios.png" alt="Beneficios" class="me-3" style="width:60px; height:60px;">
+  <div>
+    <h5>Beneficios</h5>
+    <ul>
+      <li>Cumplimiento normativo según la NSR-10 para trámites ante la Curaduría Pública Social.</li>
+      <li>Reducción de riesgos por asentamientos, deslizamientos o suelos problemáticos.</li>
+      <li>Mejora de la seguridad estructural y estabilidad de la edificación.</li>
+      <li>Protección de vidas humanas frente a eventos como sismos.</li>
+      <li>Soporte técnico para el diseño y cálculo de cimentaciones y estructuras.</li>
+      <li>Requisito para la legalización y reconocimiento de edificaciones existentes.</li>
+      <li>Facilita la integración de viviendas a procesos de formalización urbana.</li>
+      <li>Incrementa el valor comercial del inmueble.</li>
+      <li>Permite la conexión legal a servicios públicos como acueducto, alcantarillado, gas y energía.</li>
+      <li>Previene daños a propiedades vecinas y reduce conflictos legales.</li>
+      <li>Optimiza el diseño arquitectónico con base en condiciones reales del terreno.</li>
+      <li>Evita sobrecostos por rediseños durante la construcción.</li>
+      <li>Facilita el acceso a subsidios y programas de mejoramiento de vivienda.</li>
+      <li>Requisito para trámites ante entidades bancarias y aseguradoras.</li>
+    </ul>
+  </div>
+</div>
+
 
 
   </div>
