--- a/servicio-destacado.html
+++ b/servicio-destacado.html
@@ -108,9 +108,10 @@ cnia<!DOCTYPE html>
 
   
 <body>
+  
   <!-- Top Bar -->
   <div class="top-bar text-center">
-    <span><i class="bi bi-envelope"></i> gcageociencias@gmail.com | <i class="bi bi-facebook"></i> /GCA | <i class="bi bi-instagram"></i> @GCA</span>
+    <span><i class="bi bi-envelope"></i> gcageoconsultoresasociados@gmail.com | <i class="bi bi-facebook"></i> /GCA | <i class="bi bi-instagram"></i> @GCA</span>
   </div>
 
   <!-- Navigation -->
