--- a/proyectos.html
+++ b/proyectos.html
@@ -4,7 +4,7 @@ cnia<!DOCTYPE html>
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>GCA - Geociencias Aplicadas SAS</title>
+  <title>GCA - Geoconsultores Asociados</title>
 
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -108,9 +108,11 @@ cnia<!DOCTYPE html>
 
   
 <body>
+
+  
   <!-- Top Bar -->
   <div class="top-bar text-center">
-    <span><i class="bi bi-envelope"></i> gcageociencias@gmail.com | <i class="bi bi-facebook"></i> /GCA | <i class="bi bi-instagram"></i> @GCA</span>
+    <span><i class="bi bi-envelope"></i> gcageoconsultoresasociados@gmail.com | <i class="bi bi-facebook"></i> /GCA | <i class="bi bi-instagram"></i> @GCA</span>
   </div>
 
   <!-- Navigation -->
@@ -143,7 +145,7 @@ cnia<!DOCTYPE html>
 <!-- Sección de servicio y descripcción -->
   <section class="bienvenida text-center py-5">
       <div class="container">
-          <h2>Recursos Hídricos</h2>
+          <h2>Geotecnia</h2>
           <p>Evaluamos y gestionamos los recursos hídricos subterráneos y superficiales para el desarrollo sostenible de proyectos y el ecosistema.</p>
           <p>Somos un grupo de profesionales especializados en áreas como Geología, Geomorfología, Geotecnia e Hidrogeología con amplia experiencia profesional en la elaboración de estudios geotécnicos empleando metodologías de análisis de amplio uso en el medio, obteniendo información primaria por diferentes medios como sondeos directos, información de sensores remotos y métodos indirectos (Geofísica) a partir de los cuales, producto de su análisis y procesamiento se definen modelos geológico geotécnicos para adelantar los diseños respectivos, lo cual lo habilita a ofrecer precios competitivos y ajustados al presupuesto del cliente.</p>
       </div>
