--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
   box-shadow: 0 4px 10px rgba(0,0,0,0.2);
   z-index: 9999;
 ">
-  🌍 Estudios de Suelos - Licencia de Reconocimiento Predial
+  🌍 Estudios de Suelos - Licencia de Reconocimiento de Edificaciones
 </a>
 
 
