--- a/servicio-destacado.html
+++ b/servicio-destacado.html
@@ -145,7 +145,7 @@ cnia<!DOCTYPE html>
   <!-- Sección de servicio y descripcción -->
   <section class="bienvenida text-center py-5">
       <div class="container">
-          <h2>Licencia de Reconocimiento Predial</h2>
+          <h2>Licencia de Reconocimiento de Edificaciones</h2>
           <p>A través de la Curaduría Pública Social se reconocerán las viviendas que se construyeron sin licencia de construcción, localizadas en barrios legalizados urbanísticamente, y cuyo avalúo catastral sea inferior a 150 salarios mínimos (VIS).</p>
           <p>Para dar cumplimiento a los trámites exigidos por la Curaduría Pública Social, es necesario contar con un estudio de suelos.
             Este análisis técnico puede ser realizado con nosotros, garantizando calidad, cumplimiento normativo y respaldo profesional.</p>
