--- a/index.html
+++ b/index.html
@@ -113,10 +113,17 @@
 
 <body>
 
-  <!-- Top Bar -->
-  <div class="top-bar text-center">
-    <span><i class="bi bi-envelope"></i> gcageoconsultoresasociados@gmail.com | <i class="bi bi-facebook"></i> /GCA | <i class="bi bi-instagram"></i> @GCA</span>
-  </div>
+<!-- Top Bar -->
+<div class="top-bar text-center">
+  <span>
+    <i class="bi bi-telephone"></i> +57 305 728 7714 - +57 320 836 8473 |
+    <i class="bi bi-geo-alt"></i> Carrera 151C # 139 24, Santa Rita de Suba, Bogotá D.C. |
+    <i class="bi bi-envelope"></i> gcageoconsultoresasociados@gmail.com |
+    <i class="bi bi-facebook"></i> /GCA |
+    <i class="bi bi-instagram"></i> @GCA
+  </span>
+</div>
+
 
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg sticky-top">
@@ -400,6 +407,7 @@
     <div class="container text-center">
       <p>&copy; 2025 GCA Geoconsultores Asociados. Todos los derechos reservados.</p>
       <p>Especialistas en Geología, Geotecnia, Recursos Hídricos, Medio Ambiente y SIG.</p>
+      <p>Comuniquese con nostros 305 7287714 - 320 8368473.</p>
     </div>
   </footer>
 
