--- a/servicio-destacado.html
+++ b/servicio-destacado.html
@@ -1,4 +1,4 @@
-cnia<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="es">
 
 <head>
@@ -109,10 +109,16 @@ cnia<!DOCTYPE html>
   
 <body>
   
-  <!-- Top Bar -->
-  <div class="top-bar text-center">
-    <span><i class="bi bi-envelope"></i> gcageoconsultoresasociados@gmail.com | <i class="bi bi-facebook"></i> /GCA | <i class="bi bi-instagram"></i> @GCA</span>
-  </div>
+ <!-- Top Bar -->
+<div class="top-bar text-center">
+  <span>
+    <i class="bi bi-telephone"></i> +57 305 728 7714 - +57 320 836 8473 |
+    <i class="bi bi-geo-alt"></i> Carrera 151C # 139 24, Santa Rita de Suba, Bogotá D.C. |
+    <i class="bi bi-envelope"></i> gcageoconsultoresasociados@gmail.com |
+    <i class="bi bi-facebook"></i> /GCA |
+    <i class="bi bi-instagram"></i> @GCA
+  </span>
+</div>
 
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg sticky-top">
