--- a/servicio-destacado.html
+++ b/servicio-destacado.html
@@ -148,18 +148,19 @@
     </div>
   </nav>
 
-  <!-- Sección de servicio y descripcción -->
-  <section class="bienvenida text-center py-5">
-      <div class="container">
-          <h2>Licencia de Reconocimiento de Edificaciones</h2>
-          <p>A través de la Curaduría Pública Social se reconocerán las viviendas que se construyeron sin licencia de construcción, localizadas en barrios legalizados urbanísticamente, y cuyo avalúo catastral sea inferior a 150 salarios mínimos (VIS).</p>
-          <p>Para dar cumplimiento a los trámites exigidos por la Curaduría Pública Social, es necesario contar con un estudio de suelos.
-            Este análisis técnico puede ser realizado con nosotros, garantizando calidad, cumplimiento normativo y respaldo profesional.</p>
-      </div>
-  </section>
+<!-- Sección de servicio y descripción con fondo -->
+<section class="bienvenida text-center text-white py-5" style="background-image: url('Imagenes/fondo_reconocimiento.jpg'); background-size: cover; background-position: center;">
+  <div class="container">
+    <h2 class="fw-bold display-6">LICENCIA DE RECONOCIMIENTO DE EDIFICACIONES</h2>
+    <p class="lead">A través de la Curaduría Pública Social se reconocerán las viviendas que se construyeron sin licencia de construcción, localizadas en barrios legalizados urbanísticamente, y cuyo avalúo catastral sea inferior a 150 salarios mínimos (VIS).</p>
+    <p class="lead">Para dar cumplimiento a los trámites exigidos por la Curaduría Pública Social, es necesario contar con un estudio de suelos. Este análisis técnico puede ser realizado con nosotros, garantizando calidad, cumplimiento normativo y respaldo profesional.</p>
+  </div>
+</section>
 
 
 <section class="container my-5">
+
+  
   <!-- Parte 1: Título y descripción -->
   <div class="text-center mb-5">
     <h2 class="fw-bold">RECONOCIMIENTO A EDIFICACIÓN</h2>
