--- a/servicio-destacado.html
+++ b/servicio-destacado.html
@@ -208,9 +208,11 @@
   </div>
 </section>
 
-<!-- División con Imagen - efecto Parallax -->
-<section class="division-imagen-parallax">
-  <div class="parallax"></div>
+<!-- Sección de servicio y descripción con fondo -->
+<section class="bienvenida text-center text-white py-5" style="background-image: url('division_imagen.jpg'); background-size: cover; background-position: center;">
+  <div class="container">
+    <h2 class="fw-bold display-6">ESTUDIO DE SUELOS</h2>
+    </div>
 </section>
 
 
