--- a/geotermia.html
+++ b/geotermia.html
@@ -142,14 +142,40 @@
   </nav>
 
   
-<!-- Geología -->
+<!-- Título -->
   <section class="bienvenida text-center py-5">
       <div class="container">
     <h2 class="fw-bold display-6">GEOTERMIA</h2>
           <p>La geotermia es la energía calorífica proveniente del interior de la Tierra, almacenada en rocas, suelos y aguas subterráneas. Se utiliza para generar electricidad, calefacción, refrigeración y agua caliente sanitaria, ofreciendo una alternativa renovable y sostenible.</p>
 
     
+<!-- Parte 1: ¿Cómo funciona? -->
+<section class="container my-5">
+  <div class="text-center mb-5">
+    <h2 class="fw-bold">¿Cómo funciona?</h2>
+    <p class="lead">De acuerdo con la Curaduría Pública Social: Es el trámite relacionado con la solicitud de reconocimiento de edificaciones, de la licencia urbanística de construcción y de aprobación de otras actuaciones.</p>
+  </div>
 
+  <!-- Parte 2: Usos de la energía geotérmica -->
+  <div class="text-center mb-5">
+    <!-- Columna 1: Requisitos -->
+    <div class="col-md-6 mb-4">
+      <h5 class="text-primary">Usos de la energía geotérmica</h5>
+      <ul>
+        <li><strong>Cédula de ciudadanía:</strong> 1 copia legible.</li>
+        <li><strong>Formulario Único Nacional - FUN:</strong> 1 original firmado. <a href="https://www.minvivienda.gov.co/sites/default/files/consultasp/Formulario%20%C3%BAnico%20nacional_8.pdf">Descargue aquí</a></li>
+        <li><strong>Certificado de tradición y libertad:</strong> 1 copia con vigencia menor a 30 días.</li>
+        <li><strong>Certificado catastral:</strong> 1 copia o impuesto predial del último año.</li>
+        <li><strong>Peritaje Técnico:</strong> 1 original.</li>
+        <li><strong>Tarjeta o matrícula profesional:</strong> 1 copia por profesional interviniente.</li>
+        <li><strong>Poder:</strong> 1 original otorgado ante notario o juez. <a href="https://gcageoconsultores.github.io/gcageoconsultores/Documentos/poder_tramite_reconocimineto.docx">Descargue aquí</a></li>
+        <li><strong>Resolución de legalización del barrio:</strong> 1 copia legible.</li>
+        <li><strong>Escritura pública:</strong> 1 copia, o documento de propiedad o recibo de servicios públicos.</li>
+        <li><strong>Plano de loteo y manzana catastral:</strong> 1 copia de cada uno.</li>
+        <li><strong>Declaración de antigüedad:</strong> 1 original bajo juramento. <a href="https://www.cajaviviendapopular.gov.co/curaduriasocial/docs/declaracion_antiguedad.pdf">Descargue aquí</a></li>
+        <li><strong>Plano arquitectónico existente:</strong> 1 original firmado por arquitecto.</li>
+      </ul>
+    </div>
 
 
 
