--- a/geotermia.html
+++ b/geotermia.html
@@ -156,30 +156,43 @@
 <section class="container my-5">
   <div class="text-center mb-5">
     <h2 class="fw-bold">¿Cómo funciona?</h2>
-    <p class="lead">De acuerdo con la Curaduría Pública Social: Es el trámite relacionado con la solicitud de reconocimiento de edificaciones, de la licencia urbanística de construcción y de aprobación de otras actuaciones.</p>
+    <p class="lead">La energía geotérmica se extrae de diferentes maneras, dependiendo de la temperatura del recurso:</p>
+	  <p class="lead">Baja temperatura (menos de 100 °C): Se utiliza principalmente para sistemas de calefacción, refrigeración y agua caliente sanitaria en edificios y procesos industriales.</p>
+ 	  <p class="lead">Media temperatura (100-150 °C): Se usa para generación de electricidad y aplicaciones térmicas.</p>
+ 	  <p class="lead">Alta temperatura (más de 150 °C): Se utiliza principalmente para generar electricidad en centrales geotérmicas, y también puede usarse para calefacción.</p>		  
   </div>
 
-  <!-- Parte 2: Usos de la energía geotérmica -->
-  <div class="text-center mb-5">
-    <!-- Columna 1: Requisitos -->
+  <!-- Parte 2: Dos columnas -->
+  <div class="row">
+    <!-- Columna 1: Usos de la energía geotérmica -->
     <div class="col-md-6 mb-4">
       <h5 class="text-primary">Usos de la energía geotérmica</h5>
       <ul>
-        <li><strong>Cédula de ciudadanía:</strong> 1 copia legible.</li>
-        <li><strong>Formulario Único Nacional - FUN:</strong> 1 original firmado. <a href="https://www.minvivienda.gov.co/sites/default/files/consultasp/Formulario%20%C3%BAnico%20nacional_8.pdf">Descargue aquí</a></li>
-        <li><strong>Certificado de tradición y libertad:</strong> 1 copia con vigencia menor a 30 días.</li>
-        <li><strong>Certificado catastral:</strong> 1 copia o impuesto predial del último año.</li>
-        <li><strong>Peritaje Técnico:</strong> 1 original.</li>
-        <li><strong>Tarjeta o matrícula profesional:</strong> 1 copia por profesional interviniente.</li>
-        <li><strong>Poder:</strong> 1 original otorgado ante notario o juez. <a href="https://gcageoconsultores.github.io/gcageoconsultores/Documentos/poder_tramite_reconocimineto.docx">Descargue aquí</a></li>
-        <li><strong>Resolución de legalización del barrio:</strong> 1 copia legible.</li>
-        <li><strong>Escritura pública:</strong> 1 copia, o documento de propiedad o recibo de servicios públicos.</li>
-        <li><strong>Plano de loteo y manzana catastral:</strong> 1 copia de cada uno.</li>
-        <li><strong>Declaración de antigüedad:</strong> 1 original bajo juramento. <a href="https://www.cajaviviendapopular.gov.co/curaduriasocial/docs/declaracion_antiguedad.pdf">Descargue aquí</a></li>
-        <li><strong>Plano arquitectónico existente:</strong> 1 original firmado por arquitecto.</li>
+        <li><strong>Generación de electricidad:</strong> Las centrales geotérmicas transforman el calor en electricidad a través de turbinas.</li>
+        <li><strong>Climatización:</strong> Se puede utilizar para calefacción, refrigeración y agua caliente sanitaria en edificios residenciales, comerciales e industriales.</li>
+        <li><strong>Aplicaciones industriales:</strong> Se utiliza en procesos que requieren calor, como secado de productos agrícolas, procesos químicos, etc.</li>
+        <li><strong>Aguas termales:</strong> Aprovechamiento de aguas subterráneas con altas temperaturas para uso recreativo o terapéutico.</li>
       </ul>
     </div>
 
+    <!-- Columna 2: Ventajas de la geotermia -->
+    <div class="col-md-6 mb-4">
+      <h5 class="text-primary">Ventajas de la geotermia</h5>
+      <ul>
+        <li>Energía renovable:</strong>El calor de la Tierra es prácticamente inagotable.</li>
+        <li>Bajo impacto ambiental:</strong>Emite menos gases de efecto invernadero que los combustibles fósiles y no produce residuos contaminantes, aunque puede generar emisiones de gases como ácido sulfhídrico y CO2 en pequeñas cantidades.</li>
+        <li>Fuente estable y continua:</strong>A diferencia de otras energías renovables como la solar o la eólica, la geotermia está disponible las 24 horas del día, los 365 días del año.</li>
+        <li>Versatilidad:</strong>Puede utilizarse en diversas aplicaciones, desde la generación de electricidad hasta la climatización de edificios.</li>
+      <h5 class="text-primary">Desventajas de la geotermia</h5>
+      <ul>	      
+        <li>Inversión inicial:</strong>La instalación de sistemas geotérmicos puede requerir una inversión inicial elevada.</li>
+        <li>Riesgo en la perforación:</strong>En algunos casos, la perforación para acceder a los recursos geotérmicos puede no ser exitosa.</li>
+        <li>Impacto visual:</strong>La instalación de sistemas geotérmicos puede tener un impacto visual en el paisaje.</li>
+        <li>Contaminación:</strong>En casos aislados, puede contaminar aguas subterráneas con sustancias como arsénico o amoniaco, o generar emisiones de gases como ácido sulfhídrico.</li>
+      </ul>
+    </div>
+  </div>
+</section>
 
 
 
