--- a/geotermia.html
+++ b/geotermia.html
@@ -179,16 +179,16 @@
     <div class="col-md-6 mb-4">
       <h5 class="text-primary">Ventajas de la geotermia</h5>
       <ul>
-        <li>Energía renovable:</strong>El calor de la Tierra es prácticamente inagotable.</li>
-        <li>Bajo impacto ambiental:</strong>Emite menos gases de efecto invernadero que los combustibles fósiles y no produce residuos contaminantes, aunque puede generar emisiones de gases como ácido sulfhídrico y CO2 en pequeñas cantidades.</li>
-        <li>Fuente estable y continua:</strong>A diferencia de otras energías renovables como la solar o la eólica, la geotermia está disponible las 24 horas del día, los 365 días del año.</li>
-        <li>Versatilidad:</strong>Puede utilizarse en diversas aplicaciones, desde la generación de electricidad hasta la climatización de edificios.</li>
+        <li><strong>Energía renovable:</strong>El calor de la Tierra es prácticamente inagotable.</li>
+        <li><strong>Bajo impacto ambiental:</strong>Emite menos gases de efecto invernadero que los combustibles fósiles y no produce residuos contaminantes, aunque puede generar emisiones de gases como ácido sulfhídrico y CO2 en pequeñas cantidades.</li>
+        <li><strong>Fuente estable y continua:</strong>A diferencia de otras energías renovables como la solar o la eólica, la geotermia está disponible las 24 horas del día, los 365 días del año.</li>
+        <li><strong>Versatilidad:</strong>Puede utilizarse en diversas aplicaciones, desde la generación de electricidad hasta la climatización de edificios.</li>
       <h5 class="text-primary">Desventajas de la geotermia</h5>
       <ul>	      
-        <li>Inversión inicial:</strong>La instalación de sistemas geotérmicos puede requerir una inversión inicial elevada.</li>
-        <li>Riesgo en la perforación:</strong>En algunos casos, la perforación para acceder a los recursos geotérmicos puede no ser exitosa.</li>
-        <li>Impacto visual:</strong>La instalación de sistemas geotérmicos puede tener un impacto visual en el paisaje.</li>
-        <li>Contaminación:</strong>En casos aislados, puede contaminar aguas subterráneas con sustancias como arsénico o amoniaco, o generar emisiones de gases como ácido sulfhídrico.</li>
+        <li><strong>Inversión inicial:</strong>La instalación de sistemas geotérmicos puede requerir una inversión inicial elevada.</li>
+        <li><strong>Riesgo en la perforación:</strong>En algunos casos, la perforación para acceder a los recursos geotérmicos puede no ser exitosa.</li>
+        <li><strong>Impacto visual:</strong>La instalación de sistemas geotérmicos puede tener un impacto visual en el paisaje.</li>
+        <li><strong>Contaminación:</strong>En casos aislados, puede contaminar aguas subterráneas con sustancias como arsénico o amoniaco, o generar emisiones de gases como ácido sulfhídrico.</li>
       </ul>
     </div>
   </div>
