--- a/geotermia.html
+++ b/geotermia.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>GCA - Geociencias Aplicadas SAS</title>
+  <title>GCA - Geoconsultores Asociados</title>
 
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -108,10 +108,17 @@
 
   
 <body>
-  <!-- Top Bar -->
-  <div class="top-bar text-center">
-    <span><i class="bi bi-envelope"></i> gcageoconsultoresasociados@gmail.com | <i class="bi bi-facebook"></i> /GCA | <i class="bi bi-instagram"></i> @GCA</span>
-  </div>
+  
+ <!-- Top Bar -->
+<div class="top-bar text-center">
+  <span>
+    <i class="bi bi-telephone"></i> +57 305 728 7714 - +57 320 836 8473 |
+    <i class="bi bi-geo-alt"></i> Carrera 151C # 139 24, Santa Rita de Suba, Bogotá D.C. |
+    <i class="bi bi-envelope"></i> gcageoconsultoresasociados@gmail.com |
+    <i class="bi bi-facebook"></i> /GCA |
+    <i class="bi bi-instagram"></i> @GCA
+  </span>
+</div>
 
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg sticky-top">
