--- a/geotermia.html
+++ b/geotermia.html
@@ -150,7 +150,7 @@
 
   
 <!-- Título -->
-<section class="bienvenida text-center py-5" style="background-image: url('Imagenes/geotermia.jpg'); background-size: cover; background-position: center;">
+<section class="bienvenida text-center text-#2B0000 py-5" style="background-image: url('Imagenes/geotermia.jpg'); background-size: cover; background-position: center;">
   <div class="container">
     <h2 class="fw-bold display-6">GEOTERMIA</h2>
           <p>La geotermia es la energía calorífica proveniente del interior de la Tierra, almacenada en rocas, suelos y aguas subterráneas. Se utiliza para generar electricidad, calefacción, refrigeración y agua caliente sanitaria, ofreciendo una alternativa renovable y sostenible.</p>
