--- a/geotermia.html
+++ b/geotermia.html
@@ -150,10 +150,12 @@
 
   
 <!-- Título -->
-<section class="bienvenida text-center text-#2B0000 py-5" style="background-image: url('Imagenes/geotermia.jpg'); background-size: cover; background-position: center;">
+<section class="bienvenida text-center text-white py-5" style="background-image: url('Imagenes/geotermia.jpg'); background-size: cover; background-position: center;"> 
   <div class="container">
-    <h2 class="fw-bold display-6">GEOTERMIA</h2>
-          <p>La geotermia es la energía calorífica proveniente del interior de la Tierra, almacenada en rocas, suelos y aguas subterráneas. Se utiliza para generar electricidad, calefacción, refrigeración y agua caliente sanitaria, ofreciendo una alternativa renovable y sostenible.</p>
+    <h2 class="fw-bold display-6" style="text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.8);">GEOTERMIA</h2>
+    <p style="text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.8);">
+      La geotermia es la energía calorífica proveniente del interior de la Tierra, almacenada en rocas, suelos y aguas subterráneas. Se utiliza para generar electricidad, calefacción, refrigeración y agua caliente sanitaria, ofreciendo una alternativa renovable y sostenible.
+    </p>
   </div>
 </section>
 	  
