--- a/servicio-destacado.html
+++ b/servicio-destacado.html
@@ -151,7 +151,7 @@
 <!-- Sección de servicio y descripción con fondo -->
 <section class="bienvenida text-center text-white py-5" style="background-image: url('Imagenes/fondo_reconocimiento.jpg'); background-size: cover; background-position: center;">
   <div class="container">
-    <h2 class="fw-bold display-6">LICENCIA DE RECONOCIMIENTO DE EDIFICACIONES</h2>
+    <h2 class="fw-bold display-6" style="text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.8);">LICENCIA DE RECONOCIMIENTO DE EDIFICACIONES</h2>
     <p class="lead" style="text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.8);">
     A través de la Curaduría Pública Social se reconocerán las viviendas que se construyeron sin licencia de construcción, localizadas en barrios legalizados urbanísticamente, y cuyo avalúo catastral sea inferior a 150 salarios mínimos (VIS).
     Para dar cumplimiento a los trámites exigidos por la Curaduría Pública Social, es necesario contar con un estudio de suelos. Este análisis técnico puede ser realizado con nosotros, garantizando calidad, cumplimiento normativo y respaldo profesional.
