--- a/servicio-destacado.html
+++ b/servicio-destacado.html
@@ -213,7 +213,7 @@
 <!-- Sección de servicio y descripción con fondo -->
 <section class="bienvenida text-center text-white py-5" style="background-image: url('division_imagen.jpg'); background-size: cover; background-position: center;">
   <div class="container">
-    <h2 class="fw-bold display-6">ESTUDIO DE SUELOS</h2>
+    <h2 class="fw-bold display-6" style="text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.8);">ESTUDIO DE SUELOS</h2>
     </div>
 </section>
 
