--- a/index.html
+++ b/index.html
@@ -142,6 +142,7 @@
               <li><a class="dropdown-item" href="agua.html">Recursos Hídricos</a></li>
               <li><a class="dropdown-item" href="medio-ambiente.html">Medio Ambiente</a></li>
               <li><a class="dropdown-item" href="geotecnia.html">Geotecnia</a></li>
+              <li><a class="dropdown-item" href="geofisica.html">Licencias de Construcción</a></li>
               <li><a class="dropdown-item" href="geofisica.html">Geofísica</a></li>
               <li><a class="dropdown-item" href="sig.html">SIG</a></li>
             </ul>
@@ -361,6 +362,20 @@
             <div class="card-body">
               <h5 class="card-title">Amenaza, Vulnerabilidad y Riesgo</h5>
               <p class="card-text">Identificamos, analizamos y gestionamos amenazas, vulnerabilidades y riesgos para garantizar el desarrollo seguro y sostenible de tus proyectos.</p>
+            </div>
+          </div>
+        </a>
+      </div>
+
+            <div class="col-md-4 d-flex align-items-stretch">
+        <a href="geotecnia.html" class="w-100 text-decoration-none">
+          <div class="card h-100 text-center shadow-sm">
+            <div class="p-4">
+              <img src="icon-licencias.png" class="service-icon" alt="Licencias">
+            </div>
+            <div class="card-body">
+              <h5 class="card-title">Licencias de Construcción</h5>
+              <p class="card-text">Te ayudamos a cumplir con los requisitos legales, obtener los permisos necesarios para construir en su predio. En las licencias de construcción se concretarán de manera específica los usos, edificabilidad, volumetría, accesibilidad y demás aspectos técnicos aprobados para la respectiva edificación.</p>
             </div>
           </div>
         </a>
