--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
               <li><a class="dropdown-item" href="agua.html">Recursos Hídricos</a></li>
               <li><a class="dropdown-item" href="medio-ambiente.html">Medio Ambiente</a></li>
               <li><a class="dropdown-item" href="geotecnia.html">Geotecnia</a></li>
-              <li><a class="dropdown-item" href="geofisica.html">Licencias de Construcción</a></li>
+              <li><a class="dropdown-item" href="licencias.html">Licencias de Construcción</a></li>
               <li><a class="dropdown-item" href="geofisica.html">Geofísica</a></li>
               <li><a class="dropdown-item" href="sig.html">SIG</a></li>
             </ul>
@@ -368,7 +368,7 @@
       </div>
 
             <div class="col-md-4 d-flex align-items-stretch">
-        <a href="geotecnia.html" class="w-100 text-decoration-none">
+        <a href="licencias.html" class="w-100 text-decoration-none">
           <div class="card h-100 text-center shadow-sm">
             <div class="p-4">
               <img src="icon-licencias.png" class="service-icon" alt="Licencias">
