--- a/licencias.html
+++ b/licencias.html
@@ -137,6 +137,7 @@
               <li><a class="dropdown-item" href="recursos-hidricos.html">Recursos Hídricos</a></li>
               <li><a class="dropdown-item" href="medio-ambiente.html">Medio Ambiente</a></li>
               <li><a class="dropdown-item" href="geotecnia.html">Geotecnia</a></li>
+              <li><a class="dropdown-item" href="licencias.html">Licencias de Construcción</a></li>
               <li><a class="dropdown-item" href="geofisica.html">Geofísica</a></li>
               <li><a class="dropdown-item" href="sig.html">SIG</a></li>
             </ul>
