--- a/geotermia.html
+++ b/geotermia.html
@@ -160,7 +160,42 @@
   </div>
 </section>
 	  
-	  
+<!-- Contenido principal -->
+<main class="container py-5">
+  <section class="mb-5">
+    <h2 class="fw-bold">¿Qué es la geotermia?</h2>
+    <p>La geotermia es una fuente de energía limpia y sostenible que aprovecha el calor natural almacenado en el interior de la Tierra. Este calor puede utilizarse directamente para calefacción, climatización o generar electricidad mediante plantas geotérmicas.</p>
+    <img src="imagenes/geotermia_1.jpg" alt="Esquema geotérmico" class="blog-img">
+  </section>
+
+  <section class="mb-5">
+    <h2 class="fw-bold">¿Para qué sirve la geotermia?</h2>
+    <p>Se aplica en calefacción de viviendas, producción de energía eléctrica, balnearios, invernaderos y procesos industriales. Su uso disminuye la dependencia de combustibles fósiles y reduce significativamente las emisiones de CO₂.</p>
+    <img src="imagenes/geotermia_2.jpg" alt="Aplicaciones geotérmicas" class="blog-img">
+  </section>
+
+  <section class="mb-5">
+    <h2 class="fw-bold">Ventajas de la energía geotérmica</h2>
+    <ul>
+      <li>Bajo impacto ambiental.</li>
+      <li>Fuente renovable y constante.</li>
+      <li>Alta eficiencia energética.</li>
+      <li>Generación de empleo local y desarrollo tecnológico.</li>
+      <li>Compatible con otras energías renovables.</li>
+    </ul>
+  </section>
+
+  <section class="mb-5">
+    <h2 class="fw-bold">Proceso de exploración geotérmica</h2>
+    <p>Incluye cartografía geológica, análisis geoquímico, estudios geofísicos (resistividad, sísmica) y perforación de pozos exploratorios para identificar reservorios de calor accesibles.</p>
+    <img src="imagenes/geotermia_exploracion.jpg" alt="Proceso exploración" class="blog-img">
+  </section>
+
+  <section>
+    <h2 class="fw-bold">Normatividad y contexto en Colombia</h2>
+    <p>Regulada por el Ministerio de Minas y Energía y respaldada por la Ley 1715 de 2014 sobre fuentes no convencionales de energía renovable. La geotermia está siendo evaluada como alternativa viable en regiones volcánicas del país.</p>
+  </section>
+</main>	  
     
 <!-- Parte 1: ¿Cómo funciona? -->
 <section class="container my-5">
