--- a/geotermia.html
+++ b/geotermia.html
@@ -165,13 +165,13 @@
   <section class="mb-5">
     <h2 class="fw-bold">¿Qué es la geotermia?</h2>
     <p>La geotermia es una fuente de energía limpia y sostenible que aprovecha el calor natural almacenado en el interior de la Tierra. Este calor puede utilizarse directamente para calefacción, climatización o generar electricidad mediante plantas geotérmicas.</p>
-    <img src="imagenes/geotermia_1.jpg" alt="Esquema geotérmico" class="blog-img">
+    <img src="Imagenes/Geotermia/geotermia2.jpg" alt="Esquema geotérmico" class="blog-img">
   </section>
 
   <section class="mb-5">
     <h2 class="fw-bold">¿Para qué sirve la geotermia?</h2>
     <p>Se aplica en calefacción de viviendas, producción de energía eléctrica, balnearios, invernaderos y procesos industriales. Su uso disminuye la dependencia de combustibles fósiles y reduce significativamente las emisiones de CO₂.</p>
-    <img src="imagenes/geotermia_2.jpg" alt="Aplicaciones geotérmicas" class="blog-img">
+    <img src="Imagenes/Geotermia/geotermia1.jpg" alt="Aplicaciones geotérmicas" class="blog-img">
   </section>
 
   <section class="mb-5">
@@ -188,7 +188,7 @@
   <section class="mb-5">
     <h2 class="fw-bold">Proceso de exploración geotérmica</h2>
     <p>Incluye cartografía geológica, análisis geoquímico, estudios geofísicos (resistividad, sísmica) y perforación de pozos exploratorios para identificar reservorios de calor accesibles.</p>
-    <img src="imagenes/geotermia_exploracion.jpg" alt="Proceso exploración" class="blog-img">
+    <img src="Imagenes/Geotermia/geotermia_exploracion.jpg" alt="Proceso exploración" class="blog-img">
   </section>
 
   <section>
