--- a/geotermia.html
+++ b/geotermia.html
@@ -103,6 +103,14 @@
       background-repeat: no-repeat;
       background-size: cover;
     }
+    .blog-img {
+	max-width: 100%;
+  	height: auto;
+  	display: block;
+  	margin: 20px auto;
+  	border-radius: 8px;
+    }
+	  
   </style>
 </head>
 
