--- a/geotermia.html
+++ b/geotermia.html
@@ -171,13 +171,17 @@
 <main class="container py-5">
   <section class="mb-5">
     <h2 class="fw-bold">¿Qué es la geotermia?</h2>
-    <p>La geotermia es una fuente de energía limpia y sostenible que aprovecha el calor natural almacenado en el interior de la Tierra. Este calor puede utilizarse directamente para calefacción, climatización o generar electricidad mediante plantas geotérmicas.</p>
-    <img src="Imagenes/Geotermia/Esquema-geotermia2.png" alt="Esquema geotérmico" class="blog-img">
+    <p>La energía geotérmica es una forma de energía renovable, limpia y sostenible que aprovecha el calor interno de la Tierra, generado por procesos geológicos como la desintegración radiactiva de isótopos en el manto y la corteza terrestre, así como por el calor residual de la formación del planeta. Este calor se manifiesta en forma de fluidos hidrotermales (agua y vapor a alta temperatura) y rocas calientes en el subsuelo, que pueden ser utilizados para la generación de electricidad o aplicaciones térmicas directas.</p>
+    <img src="Imagenes/Geotermia/geofisica-1.jpg" alt="Esquema geotérmico" class="blog-img">
   </section>
 
   <section class="mb-5">
     <h2 class="fw-bold">¿Para qué sirve la geotermia?</h2>
     <p>Se aplica en calefacción de viviendas, producción de energía eléctrica, balnearios, invernaderos y procesos industriales. Su uso disminuye la dependencia de combustibles fósiles y reduce significativamente las emisiones de CO₂.</p>
+    <li><strong>Sistemas hidrotermales:</strong> Aprovechan vapor o agua caliente de acuíferos profundos.</li>
+    <li><strong>Sistemas binarios:</strong> Usan intercambiadores de calor para activar un fluido secundario.</li>
+    <li><strong>Sistemas de ciclo cerrado:</strong> Intercambio geotérmico para calefacción o refrigeración.</li>
+
     <img src="Imagenes/Geotermia/geotermia1.jpg" alt="Aplicaciones geotérmicas" class="blog-img">
   </section>
 
