--- a/geotecnia.html
+++ b/geotecnia.html
@@ -95,7 +95,7 @@
 </nav>
 
 <!-- Cabecera con imagen destacada -->
-<section class="hero-section" style="background-image: linear-gradient(rgba(89, 78, 64, 0.7), rgba(89, 78, 64, 0.7)), url('Imagenes/geotermia-colombia.jpg');">
+<section class="hero-section" style="background-image: linear-gradient(rgba(89, 78, 64, 0.7), rgba(89, 78, 64, 0.7)), url('Imagenes/geotermia.jpg');">
   <div class="container text-center text-white">
     <h1 class="fw-bold display-4" style="text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.8);">ENERGÍA GEOTÉRMICA EN COLOMBIA</h1>
     <p class="lead" style="text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.8); max-width: 800px; margin: 0 auto;">
@@ -139,7 +139,7 @@
         <p>Este calor se manifiesta como fluidos hidrotermales (agua/vapor) y rocas calientes, con temperaturas que varían desde 30°C hasta más de 300°C según la profundidad y actividad tectónica.</p>
       </div>
       <div class="col-lg-6">
-        <img src="Imagenes/Geotermia/esquema-sistema-terrestre.jpg" alt="Esquema del sistema geotérmico terrestre" class="img-fluid rounded shadow">
+        <img src="Imagenes/Geotermia/geofisica-1.jpg" alt="Esquema del sistema geotérmico terrestre" class="img-fluid rounded shadow">
         <figcaption class="text-center mt-2 text-muted">Figura 1. Fuentes de calor en el interior terrestre</figcaption>
       </div>
     </div>
@@ -208,7 +208,7 @@
         </div>
       </div>
       <div class="col-md-6 order-md-1">
-        <img src="Imagenes/Geotermia/exploracion-campo.jpg" alt="Trabajos de exploración geotérmica" class="img-fluid rounded shadow">
+        <img src="Imagenes/Geotermia/geotermia_exploracion.jpg" alt="Trabajos de exploración geotérmica" class="img-fluid rounded shadow">
         <figcaption class="text-center mt-2 text-muted">Figura 3. Exploración geotérmica en campo</figcaption>
       </div>
     </div>
@@ -261,7 +261,7 @@
         </div>
       </div>
       <div class="col-lg-6">
-        <img src="Imagenes/Geotermia/tecnologia-exploracion.jpg" alt="Técnicas de exploración geotérmica" class="img-fluid rounded shadow">
+        <img src="Imagenes/Geotermia/Esquema-geotermia2.jpg" alt="Técnicas de exploración geotérmica" class="img-fluid rounded shadow">
         <figcaption class="text-center mt-2 text-muted">Figura 4. Técnicas modernas de exploración</figcaption>
       </div>
     </div>
@@ -272,7 +272,7 @@
         <div class="row">
           <div class="col-md-4">
             <div class="card h-100">
-              <img src="Imagenes/Geotermia/planta-vapor-seco.jpg" class="card-img-top" alt="Planta de vapor seco">
+              <img src="Imagenes/Geotermia/geotermia1.jpg" class="card-img-top" alt="Planta de vapor seco">
               <div class="card-body">
                 <h5 class="card-title" style="color: #594E40;">Vapor Seco</h5>
                 <p class="card-text">Usan vapor directamente para mover turbinas (ej: The Geysers, EE.UU.). Requieren >150°C.</p>
@@ -281,7 +281,7 @@
           </div>
           <div class="col-md-4">
             <div class="card h-100">
-              <img src="Imagenes/Geotermia/planta-flash.jpg" class="card-img-top" alt="Planta flash">
+              <img src="Imagenes/Geotermia/geotermia2.jpg" class="card-img-top" alt="Planta flash">
               <div class="card-body">
                 <h5 class="card-title" style="color: #594E40;">Plantas Flash</h5>
                 <p class="card-text">Separan agua caliente a alta presión en vapor y líquido para generación eléctrica.</p>
@@ -290,7 +290,7 @@
           </div>
           <div class="col-md-4">
             <div class="card h-100">
-              <img src="Imagenes/Geotermia/planta-binaria.jpg" class="card-img-top" alt="Planta binaria">
+              <img src="Imagenes/Geotermia/geotermia3.jpg" class="card-img-top" alt="Planta binaria">
               <div class="card-body">
                 <h5 class="card-title" style="color: #594E40;">Ciclo Binario</h5>
                 <p class="card-text">Aprovechan fluidos de 70-150°C mediante intercambio de calor con un fluido secundario.</p>
