--- a/geotecnia.html
+++ b/geotecnia.html
@@ -189,7 +189,7 @@
         </div>
       </div>
       <div class="col-md-6">
-        <img src="Imagenes/Geotermia/mapa-potencial-colombia.jpg" alt="Mapa de potencial geotérmico en Colombia" class="img-fluid rounded shadow">
+        <img src="Imagenes/Geotermia/potencial-geotermico.png" alt="Mapa de potencial geotérmico en Colombia" class="img-fluid rounded shadow">
         <figcaption class="text-center mt-2 text-muted">Figura 2. Zonas con potencial geotérmico en Colombia</figcaption>
       </div>
     </div>
@@ -208,7 +208,7 @@
         </div>
       </div>
       <div class="col-md-6 order-md-1">
-        <img src="Imagenes/Geotermia/geotermia_exploracion.jpg" alt="Trabajos de exploración geotérmica" class="img-fluid rounded shadow">
+        <img src="Imagenes/Geotermia/exploracion-campo.jpg" alt="Trabajos de exploración geotérmica" class="img-fluid rounded shadow">
         <figcaption class="text-center mt-2 text-muted">Figura 3. Exploración geotérmica en campo</figcaption>
       </div>
     </div>
@@ -261,7 +261,7 @@
         </div>
       </div>
       <div class="col-lg-6">
-        <img src="Imagenes/Geotermia/Esquema-geotermia2.jpg" alt="Técnicas de exploración geotérmica" class="img-fluid rounded shadow">
+        <img src="Imagenes/Geotermia/geotermia_exploracion.jpg" alt="Técnicas de exploración geotérmica" class="img-fluid rounded shadow">
         <figcaption class="text-center mt-2 text-muted">Figura 4. Técnicas modernas de exploración</figcaption>
       </div>
     </div>
@@ -272,7 +272,7 @@
         <div class="row">
           <div class="col-md-4">
             <div class="card h-100">
-              <img src="Imagenes/Geotermia/geotermia1.jpg" class="card-img-top" alt="Planta de vapor seco">
+              <img src="Imagenes/Geotermia/vapor-seco.png" class="card-img-top" alt="Planta de vapor seco">
               <div class="card-body">
                 <h5 class="card-title" style="color: #594E40;">Vapor Seco</h5>
                 <p class="card-text">Usan vapor directamente para mover turbinas (ej: The Geysers, EE.UU.). Requieren >150°C.</p>
@@ -281,7 +281,7 @@
           </div>
           <div class="col-md-4">
             <div class="card h-100">
-              <img src="Imagenes/Geotermia/geotermia2.jpg" class="card-img-top" alt="Planta flash">
+              <img src="Imagenes/Geotermia/flash-planta.png" class="card-img-top" alt="Planta flash">
               <div class="card-body">
                 <h5 class="card-title" style="color: #594E40;">Plantas Flash</h5>
                 <p class="card-text">Separan agua caliente a alta presión en vapor y líquido para generación eléctrica.</p>
@@ -290,7 +290,7 @@
           </div>
           <div class="col-md-4">
             <div class="card h-100">
-              <img src="Imagenes/Geotermia/geotermia3.jpg" class="card-img-top" alt="Planta binaria">
+              <img src="Imagenes/Geotermia/binaria-planta.png" class="card-img-top" alt="Planta binaria">
               <div class="card-body">
                 <h5 class="card-title" style="color: #594E40;">Ciclo Binario</h5>
                 <p class="card-text">Aprovechan fluidos de 70-150°C mediante intercambio de calor con un fluido secundario.</p>
@@ -326,7 +326,7 @@
         </ol>
       </div>
       <div class="col-lg-6">
-        <img src="Imagenes/Geotermia/aplicaciones-cascada.jpg" alt="Sistema en cascada geotérmico" class="img-fluid rounded shadow">
+        <img src="Imagenes/Geotermia/usos_cascada.png" alt="Sistema en cascada geotérmico" class="img-fluid rounded shadow">
         <figcaption class="text-center mt-2 text-muted">Figura 5. Aprovechamiento en cascada de energía geotérmica</figcaption>
       </div>
     </div>
@@ -334,7 +334,7 @@
     <div class="row mt-4">
       <div class="col-md-4">
         <div class="card h-100">
-          <img src="Imagenes/Geotermia/balneario-termal.jpg" class="card-img-top" alt="Balneario termal">
+          <img src="Imagenes/Geotermia/paipa-termal.jpg" class="card-img-top" alt="Balneario termal">
           <div class="card-body">
             <h5 class="card-title" style="color: #594E40;">Balneoterapia</h5>
             <p class="card-text">Aprovechamiento de aguas termales para turismo wellness y tratamientos médicos (ej: Paipa).</p>
@@ -343,7 +343,7 @@
       </div>
       <div class="col-md-4">
         <div class="card h-100">
-          <img src="Imagenes/Geotermia/invernadero-geotermico.jpg" class="card-img-top" alt="Invernadero geotérmico">
+          <img src="Imagenes/Geotermia/azufral-termal.jpg" class="card-img-top" alt="Invernadero geotérmico">
           <div class="card-body">
             <h5 class="card-title" style="color: #594E40;">Agricultura</h5>
             <p class="card-text">Calefacción de invernaderos en zonas frías y secado de productos agrícolas.</p>
