--- a/geotecnia.html
+++ b/geotecnia.html
@@ -334,7 +334,7 @@
     <div class="row mt-4">
       <div class="col-md-4">
         <div class="card h-100">
-          <img src="Imagenes/Geotermia/paipa-termal.jpg" class="card-img-top" alt="Balneario termal">
+          <img src="Imagenes/Geotermia/balnoterapia2.jpg" class="card-img-top" alt="Balneario termal">
           <div class="card-body">
             <h5 class="card-title" style="color: #594E40;">Balneoterapia</h5>
             <p class="card-text">Aprovechamiento de aguas termales para turismo wellness y tratamientos médicos (ej: Paipa).</p>
@@ -343,7 +343,7 @@
       </div>
       <div class="col-md-4">
         <div class="card h-100">
-          <img src="Imagenes/Geotermia/azufral-termal.jpg" class="card-img-top" alt="Invernadero geotérmico">
+          <img src="Imagenes/Geotermia/agricultura-termal.jpg" class="card-img-top" alt="Invernadero geotérmico">
           <div class="card-body">
             <h5 class="card-title" style="color: #594E40;">Agricultura</h5>
             <p class="card-text">Calefacción de invernaderos en zonas frías y secado de productos agrícolas.</p>
@@ -352,7 +352,7 @@
       </div>
       <div class="col-md-4">
         <div class="card h-100">
-          <img src="Imagenes/Geotermia/bomba-calor.jpg" class="card-img-top" alt="Bomba de calor">
+          <img src="Imagenes/Geotermia/bomba-calor.png" class="card-img-top" alt="Bomba de calor">
           <div class="card-body">
             <h5 class="card-title" style="color: #594E40;">Climatización</h5>
             <p class="card-text">Bombas de calor geotérmicas para calefacción/refrigeración de edificios.</p>
