--- a/servicio-destacado.html
+++ b/servicio-destacado.html
@@ -133,12 +133,12 @@
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="serviciosDropdown" role="button" data-bs-toggle="dropdown">Servicios</a>
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="geotermia.html">Geotermia</a></li>
-              <li><a class="dropdown-item" href="recursos-hidricos.html">Recursos Hídricos</a></li>
-              <li><a class="dropdown-item" href="medio-ambiente.html">Medio Ambiente</a></li>
-              <li><a class="dropdown-item" href="geotecnia.html">Geotecnia</a></li>
-              <li><a class="dropdown-item" href="licencias.html">Licencias de Construcción</a></li>
               <li><a class="dropdown-item" href="geofisica.html">Geofísica</a></li>
+              <li><a class="dropdown-item" href="geotecnia.html">Geotecnia</a></li>
+              <li><a class="dropdown-item" href="geotermia.html">Geotermia</a></li>
+              <li><a class="dropdown-item" href="licencias.html">Licencias de Construcción</a></li>                     
+              <li><a class="dropdown-item" href="medio-ambiente.html">Medio Ambiente</a></li>
+              <li><a class="dropdown-item" href="agua.html">Recursos Hídricos</a></li>             
               <li><a class="dropdown-item" href="sig.html">SIG</a></li>
             </ul>
           </li>
