--- a/agua.html
+++ b/agua.html
@@ -98,7 +98,7 @@
 
   
 <!-- Cabecera con imagen destacada -->
-<section class="hero-section" style="background-image: linear-gradient(rgba(89, 78, 64, 0.7), rgba(89, 78, 64, 0.7)), url('Imagenes/geofisica-hero.jpg');">
+<section class="hero-section" style="background-image: linear-gradient(rgba(89, 78, 64, 0.7), rgba(89, 78, 64, 0.7)), url('Imagenes//Geofisica/geofisica-3.jpg');">
   <div class="container text-center text-white">
     <h1 class="fw-bold display-4" style="text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.8);">GEOFÍSICA APLICADA</h1>
     <p class="lead" style="text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.8); max-width: 800px; margin: 0 auto;">
