--- a/agua.html
+++ b/agua.html
@@ -546,7 +546,17 @@
 
 <!-- Estilos personalizados -->
 <style>
-
+  .hero-section {
+    position: relative;
+    width: 100%;
+    height: 90vh;
+    background-size: cover;
+    background-position: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  
   .blog-img {
     max-width: 100%;
     height: auto;
